test/compare/sources/errors/bad-init.go


package main

func init() {
}

func init(a int) {
}

func main() {
}
